<resources>
    <string name="app_name">HomeWork2</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="num1">Введите первое число</string>
    <string name="num2">Введите второе число</string>
    <string name="result">Результат</string>
    <string name="Результат" />
    <string name="NUM1">NUM 1</string>
    <string name="NUM2">NUM2</string>
    <string name="_dividing">/</string>
    <string name="_multiplying">*</string>
    <string name="_minus">-</string>
    <string name="_equally">=</string>
    <string name="_dot">.</string>
    <string name="_plus">+</string>
    <string name="Число_1">NUM 1</string>
    <string name="Число_2">NUM2</string>
    <string name="heme.HomeWork_red">RED</string>
    <string name="heme.HomeWork_green">GREEN</string>

</resources>